--- a/webpack-init/package.json
+++ b/webpack-init/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack",
+    "dev-server": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
@@ -19,11 +20,13 @@
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.51.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "@babel/runtime-corejs3": "^7.15.3"
+    "@babel/runtime-corejs3": "^7.15.3",
+    "clean-webpack-plugin": "^4.0.0"
   }
 }
